src/objects/EventAttendees__c.object
<CustomObject>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelationId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EventAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not_Invited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EventAttendees</label>
    <nameField>
        <label>EventAttendees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventAttendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>